# VMware-AVI

./: .env.example  .gitattributes  .gitignore  Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  pyproject.toml  server.json  smithery.yaml
.claude/: settings.local.json
evals/: evals.json
examples/mcp-configs/: claude-code.json  cursor.json
mcp_server/: server.py
skills/vmware-avi/: SKILL.md
skills/vmware-avi/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: conftest.py  test_ako_pod.py  test_ako_sync.py  test_analytics.py  test_audit.py  test_config.py  test_error_logs.py  test_mcp_error_paths.py  test_mcp_tools.py  test_no_destructive_ops.py  test_pool_mgmt.py  test_safe_error_passthrough.py  test_se_mgmt.py  test_vs_mgmt.py
tests/eval/capability/: _scores.json  _skill.py
tests/eval/regression/: test_ako_diff_predicts_upgrade.py  test_avi_specific.py  test_cli_writes_guarded.py  test_declared_environment.py  test_env_secret_obfuscation.py  test_external_text_sanitized.py  test_fix_pack.py  test_helm_values_redaction.py  test_init_and_onboarding.py  test_list_scaling.py  (+3 more)
vmware_avi/: __init__.py  _errors.py  _safety.py  cli.py  config.py  connection.py  doctor.py  init_wizard.py  k8s_connection.py
vmware_avi/mcp_server/: __init__.py  __main__.py  server.py
vmware_avi/notify/: __init__.py  audit.py
vmware_avi/ops/: __init__.py  ako_config.py  ako_ingress.py  ako_multi_cluster.py  ako_pod.py  ako_sync.py  analytics.py  pool_mgmt.py  se_mgmt.py  ssl_mgmt.py  vs_mgmt.py
